--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Databases\" />
   </ItemGroup>
 
   <ItemGroup>
