--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\Alpha_Assignment\\Data\\Databases\\database_Alpha.mdf;Integrated Security=True;Connect Timeout=30"
+  }
 }
