--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
