--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "AzureBlobStorage": "",
     "LocalDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\Alpha_Assignment\\Data\\Databases\\database_Alpha.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
